--- a/notebooks/Potential.ipynb
+++ b/notebooks/Potential.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "import gala.dynamics as gd\n",
     "import gala.potential as gp\n",
-    "from gala.units import galactic"
+    "from gala.units import galactic\n",
+    "import biff.scf as bscf"
    ]
   },
   {
@@ -34,14 +35,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nmax = 3\n",
+    "lmax = 6\n",
+    "\n",
+    "nlm = np.array([[0,0,0],\n",
+    "                [1,0,0],\n",
+    "                [2,0,0],\n",
+    "                [3,0,0],\n",
+    "                [0,2,0],\n",
+    "                [1,2,0],\n",
+    "                [2,2,0],\n",
+    "                [0,2,2],\n",
+    "                [1,2,2],\n",
+    "                [2,2,2],\n",
+    "                [0,4,0],\n",
+    "                [1,4,0],\n",
+    "                [0,4,2],\n",
+    "                [1,4,2],\n",
+    "                [0,4,4],\n",
+    "                [1,4,4],\n",
+    "                [0,6,0],\n",
+    "                [0,6,2],\n",
+    "                [0,6,4],\n",
+    "                [0,6,6]])\n",
+    "\n",
+    "_Snlm = np.array([1.509,-0.086,-0.033,-0.02,-2.606,\n",
+    "                  -0.221,-0.001,0.665,0.129,0.006,6.406,\n",
+    "                  1.295,-0.66,-0.14,0.044,-0.012,-5.859,\n",
+    "                  0.984,-0.03,0.001])\n",
+    "\n",
+    "Snlm = np.zeros((nmax+1,lmax+1,lmax+1))\n",
+    "for (n,l,m),S in zip(nlm,_Snlm):\n",
+    "    Snlm[n,l,m] = S\n",
+    "\n",
+    "Tnlm = np.zeros_like(Snlm)\n",
+    "\n",
+    "bar = bscf.SCFPotential(m=1E10*u.Msun, r_s=1., Snlm=Snlm, Tnlm=Tnlm, units=galactic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pot = gp.CCompositePotential()\n",
     "\n",
-    "pot['bar'] = gp.LongMuraliBarPotential(m=1E10*u.Msun, \n",
-    "                                       a=4*u.kpc, b=0.1*u.kpc, c=0.4*u.kpc, \n",
-    "                                       units=galactic)\n",
+    "# pot['bar'] = gp.LongMuraliBarPotential(m=1E10*u.Msun, \n",
+    "#                                        a=4*u.kpc, b=0.1*u.kpc, c=0.4*u.kpc, \n",
+    "#                                        units=galactic)\n",
+    "pot['bar'] = bar\n",
     "pot['sph'] = gp.HernquistPotential(m=5E9, c=0.5, \n",
     "                                   units=galactic)\n",
     "pot_bar_bulge = pot.copy()\n",
@@ -65,8 +113,8 @@
     "grid = np.linspace(-15, 15, 256)\n",
     "\n",
     "fig,axes = plt.subplots(1, 2, figsize=(12,6))\n",
-    "_ = pot.plot_density_contours(grid=(grid, grid, 0), ax=axes[0])\n",
-    "_ = pot.plot_density_contours(grid=(grid, 0, grid), ax=axes[1])"
+    "_ = bar.plot_contours(grid=(grid, grid, 0), ax=axes[0])\n",
+    "_ = bar.plot_contours(grid=(grid, 0, grid), ax=axes[1])"
    ]
   },
   {
@@ -171,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Rs = np.linspace(4, 10, 16)\n",
@@ -210,22 +260,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = np.linspace(0, 10, 128)\n",
-    "Rc = 2\n",
-    "plt.loglog(R, (R**-1)*np.exp(-R/Rc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pot = gp.CCompositePotential()\n",
     "\n",
-    "pot['bar'] = gp.LongMuraliBarPotential(m=1E10*u.Msun, \n",
-    "                                       a=4*u.kpc, b=0.5*u.kpc, c=0.5*u.kpc, \n",
-    "                                       units=galactic)\n",
+    "# pot['bar'] = gp.LongMuraliBarPotential(m=1E10*u.Msun, \n",
+    "#                                        a=4*u.kpc, b=0.5*u.kpc, c=0.5*u.kpc, \n",
+    "#                                        units=galactic)\n",
+    "pot['bar'] = bar\n",
     "pot['inner_disk'] = gp.MiyamotoNagaiPotential(m=5E9*u.Msun, \n",
     "                                              a=0.5*u.kpc, b=280*u.pc, \n",
     "                                              units=galactic)\n",
@@ -323,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = [0, 2, 4, 6, 8] * u.kpc\n",
