--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -45,8 +45,29 @@
 
 \begin{abstract}
 % Context
+The Milky Way's triaxial bulge/bar is a significant component of the mass
+distribution in the inner Galaxy, accounting for $\approx$1/6 of the visible
+mass of the disk.
+Bars alter the orbit structure of a galaxy by creating resonances and chaotic
+orbits.
+Chaotic orbits cause kinematic substructures---e.g., stellar streams or open
+clusters---to mix more rapidly than around purely regular orbits.
+The Galactic bar will therefore have a significant impact on the amount of
+kinematic substructure in the central Galaxy and inner stellar halo.
 % Aims
+In this work, we study the types of orbits in the inner disk and halo of a Milky
+Way-like mass model that includes a triaxial bar.
+We then measure the mixing rate of cold substructures around these orbits.
 % Methods
+We first map the orbit structure of our Milky Way model by computing fundamental
+frequencies and frequency diffusion rates in a rotating frame for grids of
+orbits with constant Jacobi energy.
+We vary the pattern speed (and therefore corotation radius and bar length)
+from 30--60~\kmskpc, a range of pattern speeds that brackets the plausible
+pattern speeds for the Galactic bar.
+We then perform the same tests using orbits sampled from stellar halo-like
+distribution functions with different anisotropy parameters to see how the
+number of strongly chaotic orbits depends on the bar mass and pattern speed.
 % Results
 % Conclusions
 \end{abstract}
