--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -94,8 +94,18 @@ Does this erase substructure?
 
 \subsection{Mass model of the Milky Way} \label{sec:potential}
 
-We use a multi-component mass model for the mass distribution of the Milky Way
-that accounts for the stellar disk, dark matter halo, and bar/bulge.
+The total gravitational field of the Milky Way is time-dependent and rich with
+substructure on a large range of scales.
+[The different components of the Galaxy have formed and evolved in different
+ways]
+[Still, we've learned a lot using simple static models.]
+Here, we construct a simple mass model that contains smooth representations of
+the dominant components of the Milky Way's mass distribution: the stellar and
+gas disks, stellar bar, and dark matter halo.
+[No external perturbations, e.g., Sgr. No spiral structure, evolving disk,]
+
+Our Milky Way mass model accounts for the stellar and gas disks, dark matter
+halo, and bar/bulge.
 \todo{disk, halo}
 
 For the Galactic bar component, we use a triaxial, Gaussian density
